# Halcyon

./: .gitignore  ForgeContentManager.spec  README.md  pyproject.toml  start.bat
.github/: copilot-instructions.md
docs/: build-instructions.md  docs-cli.md
scripting_docs/: script_documentation.sqlite3
scripting_docs/catalog/: README.md  ability-mode.md  keyword.md  keywords.md  parameter.md  replacement-mode.md  static-mode.md  trigger-mode.md
scripts/: Build-Release.ps1
src/forge_content_manager/: __init__.py  __main__.py  constants.py  devtools.py  logging_config.py  main.py  models.py
src/forge_content_manager.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/forge_content_manager/services/: __init__.py  backup_service.py  content_service.py  documentation_pack.py  edition_service.py  forge_paths.py  image_service.py  package_service.py  script_authoring_service.py  script_service.py  settings_service.py
src/forge_content_manager/ui/: application.py  dialogs.py  widgets.py
src/forge_content_manager/ui/tabs/: __init__.py  card_browser_tab.py  card_import_tab.py  script_editor_tab.py  set_manager_tab.py  settings_tab.py
tests/: test_documentation_pack.py  test_script_authoring_service.py
