[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "halcyon"
version = "0.1.0"
description = "Halcyon desktop manager for Forge custom MTG cards and sets"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "customtkinter>=5.2.2",
    "Pillow>=10.3.0",
]

[project.scripts]
halcyon = "forge_content_manager.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
